--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
       <span id="current-page">1</span>/<span id="total-pages">10</span>
     </div>
   </div>
-    <audio id="bgMusic" loop>
+    <audio id="bgMusic" loop, autoplay>
         <source src="song.mp3" type="audio/mpeg">
         Your browser doesn't support audio.
     </audio>
