--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <!-- Background Music -->
-  <audio id="background-music" loop autoplay>
-    <source src="music.mp3" type="audio/mp3">
+  <audio id="background-music" loop>
+    <source src="song.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
   
@@ -157,10 +157,8 @@
       <span id="current-page">1</span>/<span id="total-pages">10</span>
     </div>
   </div>
-    <audio id="bgMusic" loop, autoplay>
-        <source src="song.mp3" type="audio/mpeg">
-        Your browser doesn't support audio.
-    </audio>
+  
   <script src="script.js"></script>
 </body>
 </html>
+
