--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <!-- Background Music -->
-  <audio id="background-music" loop>
-    <source src="song.mp3" type="audio/mpeg">
+  <audio id="background-music" loop autoplay>
+    <source src="song.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
   
@@ -157,8 +157,6 @@
       <span id="current-page">1</span>/<span id="total-pages">10</span>
     </div>
   </div>
-  
   <script src="script.js"></script>
 </body>
 </html>
-
